--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -30,5 +30,8 @@ output {
     file {
       path => "/usr/share/logstash/log/logstash-es_search.log"
     }
+    elasticsearch {
+      hosts => ["172.17.0.2:9200"]
+    }
   }
 }
