logstash config update

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -19,6 +19,36 @@ filter {
       remove_field => ["[requestbody][aggs]"]
       add_tag => ["es_search"]
     }
+    ruby {
+      code => '
+        requestbody = event.get("requestbody")
+        unless requestbody["query"]["bool"].nil?
+          searchwords = []
+          searchwordsObject = requestbody["query"]["bool"]["should"]
+          searchwordsObject.each_index { |i|
+            if searchwordsObject[i]["multi_match"]["fuzziness"] == "AUTO"
+              searchwords.push(searchwordsObject[i]["multi_match"]["query"])
+            end
+          }
+          event.set("searchwords", searchwords)
+        end
+
+        unless requestbody["post_filter"].nil?
+          filters = {}
+          filterCategoriesObject = requestbody["post_filter"]["bool"]["must"]
+          filterCategoriesObject.each_index { |i|
+            filterInCategory = []
+            filtersObject = filterCategoriesObject[i]["bool"]["should"]
+            categoryName = filtersObject[0]["term"].keys[0]
+            filtersObject.each_index { |j|
+              filterInCategory.push(filtersObject[j]["term"]["#{categoryName}"])
+            }
+            filters["#{categoryName.split(".")[0]}"] = filterInCategory
+          }
+          event.set("filters", filters)
+        end
+      '
+    }
   }
 }
 
