--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -22,7 +22,7 @@ filter {
     ruby {
       code => '
         requestbody = event.get("requestbody")
-        unless requestbody["query"]["bool"].nil?
+        unless requestbody["query"]["bool"]["should"].nil?
           searchwords = []
           searchwordsObject = requestbody["query"]["bool"]["should"]
           searchwordsObject.each_index { |i|
@@ -33,7 +33,7 @@ filter {
           event.set("searchwords", searchwords)
         end
 
-        unless requestbody["post_filter"].nil?
+        unless requestbody["post_filter"]["bool"]["must"].nil?
           filters = {}
           filterCategoriesObject = requestbody["post_filter"]["bool"]["must"]
           filterCategoriesObject.each_index { |i|
