--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -5,7 +5,7 @@ input {
 }
 
 filter {
-  if [path] =~ "\/.*\/_search" {
+  if [path] =~ "\/.*\/_search" and [index] == "courses" {
     grok {
       match => {"path" => "\/(?<index>.*)\/_search"}
     }
@@ -22,30 +22,34 @@ filter {
     ruby {
       code => '
         requestbody = event.get("requestbody")
-        unless requestbody["query"]["bool"]["should"].nil?
+        unless requestbody["query"]["bool"].nil?
           searchwords = []
           searchwordsObject = requestbody["query"]["bool"]["should"]
-          searchwordsObject.each_index { |i|
-            if searchwordsObject[i]["multi_match"]["fuzziness"] == "AUTO"
-              searchwords.push(searchwordsObject[i]["multi_match"]["query"])
-            end
-          }
-          event.set("searchwords", searchwords)
+          unless searchwordsObject.nil?
+            searchwordsObject.each_index { |i|
+              if searchwordsObject[i]["multi_match"]["fuzziness"] == "AUTO"
+                searchwords.push(searchwordsObject[i]["multi_match"]["query"])
+              end
+            }
+            event.set("searchwords", searchwords)
+          end
         end
 
-        unless requestbody["post_filter"]["bool"]["must"].nil?
+        unless requestbody["post_filter"].nil?
           filters = {}
           filterCategoriesObject = requestbody["post_filter"]["bool"]["must"]
-          filterCategoriesObject.each_index { |i|
-            filterInCategory = []
-            filtersObject = filterCategoriesObject[i]["bool"]["should"]
-            categoryName = filtersObject[0]["term"].keys[0]
-            filtersObject.each_index { |j|
-              filterInCategory.push(filtersObject[j]["term"]["#{categoryName}"])
+          unless filterCategoriesObject.nil?
+            filterCategoriesObject.each_index { |i|
+              filterInCategory = []
+              filtersObject = filterCategoriesObject[i]["bool"]["should"]
+              categoryName = filtersObject[0]["term"].keys[0]
+              filtersObject.each_index { |j|
+                filterInCategory.push(filtersObject[j]["term"]["#{categoryName}"])
+              }
+              filters["#{categoryName.split(".")[0]}"] = filterInCategory
             }
-            filters["#{categoryName.split(".")[0]}"] = filterInCategory
-          }
-          event.set("filters", filters)
+            event.set("filters", filters)
+          end
         end
       '
     }
