--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -5,7 +5,7 @@ input {
 }
 
 filter {
-  if [path] =~ "\/.*\/_search" and [index] == "courses" {
+  if [path] == "/courses/course/_search" {
     grok {
       match => {"path" => "\/(?<index>.*)\/_search"}
     }
